# COVIS

./: CMakeLists.txt  README.md  covis.xml  package.xml
3rdPartLib/: install3rdPartLib.sh
3rdPartLib/DBow2/: VocabularyBinary.cpp  VocabularyBinary.hpp
3rdPartLib/DBow2/DBoW/: FBrief.h  TemplatedDatabase.h  TemplatedVocabulary.h
3rdPartLib/DBow3/: CMakeLists.txt
3rdPartLib/DLib/DVision/: BRIEF.h
bag/: .gitignore
bag/EUROC/: read.md
bag/record/: c0_depth.launch  c0_depth.sh  c0_stereo.launch  c0_stereo.sh  c1_depth .sh  c1_depth.launch  c1_depth.sh  c1_stereo.launch  c1_stereo.sh
launch/: covis_C0.launch  covis_C0_stereo.launch  covis_C1.launch  covis_C1_stereo.launch  covis_kitti.launch  rep_rec.launch
launch/KITTI/: KITTI.yaml
launch/LAN/: ros_multi
launch/MultiAgent/Bag/: covis_bag_0.launch  covis_bag_1.launch  covis_bag_2.launch
launch/MultiAgent/Campus/: Server_campus.launch  car.launch  covis_bag_0.launch  covis_bag_1.launch  covis_bag_2.launch  drone.launch  multi_bag.launch
launch/MultiAgent/Campus/conf/: Server_bag.yaml  c0_pix_stereo.yaml  c1_stereoi.yaml  c2_pix_stereo.yaml
launch/MultiAgent/EUROC/: Server_euroc.launch  covis_euroc_1.launch  covis_euroc_2.launch  covis_euroc_3.launch  covis_euroc_4.launch  covis_euroc_5.launch  multi_euroc.launch
launch/MultiAgent/EUROC/conf/: Client1.yaml  Client2.yaml  EUROC.yaml  Server_EUROC.yaml
launch/MultiAgent/EUROC/conf/MH_01_easy/: .~lock.data.csv#
launch/MultiAgent/KITTI/conf/: Client1.yaml  Client2.yaml  KITTI.yaml  Server_KITTI.yaml
launch/MultiAgent/multi_bag/: covis_bag_0.launch  covis_bag_1.launch  covis_bag_2.launch  multi_bag.launch
launch/MultiAgent/multi_euroc/: covis_euroc_1.launch  covis_euroc_2.launch  covis_euroc_3.launch  euroc_multi.yaml  multi_euroc.launch
launch/Server/: Server.launch  Server_stereo.launch  rviz_Server.launch
launch/Server/conf/: Client0.yaml  Client1.yaml  Client2.yaml  Server.yaml
launch/d435_pixhawk/: d435_depth.launch  flvis_d435_pixhawk_depth.launch  px4.launch  sn841512070537_depth_px4.yaml
launch/d435i/: d435_depth.yaml  d435_stereo.yaml  d435i.json  d435i_depth.launch  d435i_depth.yaml  d435i_stereo.launch  d435i_stereo.yaml
launch/d455/: d455_stereo.launch  d455_stereo.yaml  flvis_d455_stereo.launch  sn943222072828_stereo.yaml
launch/drones/drone0/: covis_drone0.launch  d435.json  d435_depth.launch  d435_stereo.launch  depth_px4.yaml  px4.launch  px4_depth.yaml  px4_stereo.yaml
launch/drones/drone1/: covis_drone1.launch  d435_depth.launch  depth_px4.yaml  px4.launch
launch/drones/drone2/: covis_drone2.launch  d435_depth.launch  depth_px4.yaml
launch/rviz/: Server.rviz  kitti.rviz  rviz_Client0.launch  rviz_Client1.launch  rviz_Client2.launch
msg/: KeyFrame.msg
results/: 1_readme
src/backend/: merging.cpp  poselmbag.cpp  vo_localmap.cpp  vo_merging.cpp
src/backend/include/: merging.h
src/frontend/: f2f_tracking.cpp  vo_tracking.cpp
src/frontend/include/: f2f_tracking.h
src/independ_modules/: kitti_publisher.cpp  vo_repub_rec.cpp
src/processing/: camera_frame.cpp  depth_camera.cpp  feature_dem.cpp  landmark.cpp  lkorb_tracking.cpp  optimize_in_frame.cpp  triangulation.cpp  vi_motion.cpp
src/processing/include/: camera_frame.h  client_config.h  depth_camera.h  feature_dem.h  landmark.h  lkorb_tracking.h  triangulation.h  vi_motion.h
src/test/: create_voc.cpp  se3.cpp
src/utils/: correction_inf_msg.cpp  keyframe_msg.cpp  keyframe_msg_handler.cpp
src/utils/include/: common.h  correction_inf_msg.h  keyframe_msg.h  keyframe_msg_handler.h  yamlRead.h
src/visualization/: rviz_edge.cpp  rviz_frame.cpp  rviz_mesh.cpp  rviz_odom.cpp  rviz_path.cpp  rviz_pose.cpp
src/visualization/include/: cv_draw.h  rviz_edge.h  rviz_frame.h  rviz_mesh.h  rviz_odom.h  rviz_path.h  rviz_pose.h
